[336] Resolve Sonar issues
Bug: 336

Change-Id: Ib7eba0f8139b62ca346307e58d6abce8514d0c9a
Signed-off-by: Damien Filliat <damien.filliat@thalesgroup.com>